// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`loadEnv website with both versioning & translation disabled 1`] = `
Object {
  "translation": Object {
    "defaultLanguage": Object {},
    "enabled": false,
    "enabledLanguages": Array [],
  },
  "versioning": Object {
    "defaultVersion": null,
    "enabled": false,
    "latestVersion": null,
    "versions": Array [],
  },
}
`;

exports[`loadEnv website with translation enabled 1`] = `
Object {
  "translation": Object {
    "defaultLanguage": Object {
      "enabled": true,
      "name": "English",
      "tag": "en",
    },
    "enabled": true,
    "enabledLanguages": Array [
      Object {
        "enabled": true,
        "name": "English",
        "tag": "en",
      },
      Object {
        "enabled": true,
        "name": "한국어",
        "tag": "ko",
      },
    ],
  },
  "versioning": Object {
    "defaultVersion": null,
    "enabled": false,
    "latestVersion": null,
    "versions": Array [],
  },
}
`;

exports[`loadEnv website with versioning & translation enabled 1`] = `
Object {
  "translation": Object {
    "defaultLanguage": Object {
      "enabled": true,
      "name": "English",
      "tag": "en",
    },
    "enabled": true,
    "enabledLanguages": Array [
      Object {
        "enabled": true,
        "name": "English",
        "tag": "en",
      },
      Object {
        "enabled": true,
        "name": "한국어",
        "tag": "ko",
      },
    ],
  },
  "versioning": Object {
    "defaultVersion": "1.0.1",
    "enabled": true,
    "latestVersion": "1.0.1",
    "versions": Array [
      "1.0.1",
      "1.0.0",
    ],
  },
}
`;

exports[`loadEnv website with versioning enabled 1`] = `
Object {
  "translation": Object {
    "defaultLanguage": Object {},
    "enabled": false,
    "enabledLanguages": Array [],
  },
  "versioning": Object {
    "defaultVersion": "1.0.1",
    "enabled": true,
    "latestVersion": "1.0.1",
    "versions": Array [
      "1.0.1",
      "1.0.0",
    ],
  },
}
`;
